# zephyr-workshop

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  slides.tex  west.yml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_start_interactive.sh  post-create.sh
.github/workflows/: build-docs.yml  build.yml
app/: CMakeLists.txt  Kconfig  README.rst  prj.conf  prj_native_ctf.conf  prj_sysview_rtt.conf  prj_usb_ctf.conf  sample.yaml
app/boards/: native_sim.overlay
app/src/: main.c  sample_usbd_init.c
app/src/common/: CMakeLists.txt  message_channel.c  message_channel.h
app/src/components/button/: CMakeLists.txt  Kconfig.button  button.c
app/src/components/button/tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/src/components/button/tests/src/: test_button.c
app/src/components/button_mock/: Kconfig.button_mock  button_mock.c
app/src/components/led/: Kconfig.led  led.c
app/src/components/led/tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/src/components/led/tests/src/: test_led.c
app/src/components/sensor_log/: CMakeLists.txt  Kconfig.sensor_log  sensor_log.c
app/src/components/sensor_log/tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/src/components/sensor_log/tests/src/: test_sensor_log.c
app/src/components/sys_ctrl/: CMakeLists.txt  Kconfig.sys_ctrl  sys_ctrl.c
app/src/components/sys_ctrl/tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/src/components/sys_ctrl/tests/src/: test_sys_ctrl.c
app/src/components/temp_alert/: CMakeLists.txt  Kconfig.temp_alert  temp_alert.c
app/src/components/temp_alert/tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/src/components/temp_alert/tests/src/: test_temp_alert.c
app/src/components/tempsense/: CMakeLists.txt  Kconfig.tempsense  tempsense.c
app/src/components/tempsense/tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
app/src/components/tempsense/tests/src/: test_tempsense.c
app/src/components/tracing_usb/: CMakeLists.txt  Kconfig.tracing_usb  tracing_usb.c
app/src/modules/button/: CMakeLists.txt  Kconfig.button  button.c
app/src/modules/button_mock/: CMakeLists.txt  Kconfig.button_mock  button_mock.c
app/src/modules/led/: CMakeLists.txt  Kconfig.led  led.c
app/src/modules/sys_ctrl/: CMakeLists.txt  sys_ctrl.c  sys_ctrl.h
app/src/modules/tracing_usb/: CMakeLists.txt  Kconfig.tracing_usb  tracing_usb.c
app/test_cfg/: button_component.conf  button_module.conf  led_component.conf  led_module.conf  sensor_log.conf  sys_ctrl_component.conf  sys_ctrl_module.conf  temp_alert.conf  tempsense.conf
boards/: native_sim.conf  native_sim.overlay
cmake/: workshop_board.cmake
doc/: conf.py  index.rst  requirements.txt  tox.ini
doc/slides/: .gitignore  index.html  package.json  slides.md  style.css
doc/slides/pages/: 00-toc.md  01-introduction.md  02-development-setup.md  03-workspace-application.md  04-code-examples.md  05-application-development.md  06-summary.md  07-backup-slides.md
doc/slides/public/images/: ai_requirements.txt
doc/src/: application.rst  architecture.rst  introduction.rst  llm_future.rst  setup.rst  slides.rst  task_app_extension.rst  testing.rst  tracing.rst
emulators/: CMakeLists.txt  Kconfig
emulators/sensor/: CMakeLists.txt  Kconfig
emulators/sensor/ti_hdc_emul/: CMakeLists.txt  Kconfig  emul_ti_hdc.c
samples/01_hello_world/: README.rst  sample.yaml
samples/02_logging/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/02_logging/src/: main.c
samples/03_workqueues/: README.rst  sample.yaml
samples/03_workqueues/src/: main.c
samples/04_shell/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/04_shell/src/: main.c
samples/05_sensor/: CMakeLists.txt  README.rst  sample.yaml
samples/05_sensor/src/: main.c
samples/06_ble/: CMakeLists.txt  README.rst  sample.yaml
samples/07_display_cfb/: CMakeLists.txt  README.rst  sample.yaml
samples/07_display_cfb/src/: main.c
samples/08_sys_init/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/08_sys_init/src/: main.c  module_1.c  module_2.c
slides/: Makefile  slides.tex  workshop_slides.tex
test/button/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
test/button/boards/: native_sim.overlay
test/button/src/: main.c
test/led/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
test/led/src/: main.c
test/sys_ctrl/: CMakeLists.txt  prj.conf  sample.yaml
test/sys_ctrl/src/: main.c
util/: 50-zephyr-tracing.rules  flash_boards.sh  run_twister_integration.sh  stm32f4.resc
zephyr/: module.yml
